Generate Posit Connect manifest for Shiny Python deployment

--- a/.github/workflows/deploy-shinypy.yml
+++ b/.github/workflows/deploy-shinypy.yml
@@ -20,6 +20,12 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Install rsconnect-python
+        run: python -m pip install --upgrade pip rsconnect-python
+
+      - name: Create manifest.json for Posit Connect
+        run: rsconnect write-manifest shiny 04_deployment/positconnect/shinypy
+
       - name: Publish to Posit Connect
         uses: rstudio/actions/connect-publish@main
         with:
